--- a/.golangci.yml
+++ b/.golangci.yml
@@ -9,7 +9,9 @@ linters:
     - copyloopvar
     - cyclop
     - decorder
+    - dogsled
     - dupl
+    - err113
     - errcheck
     - govet
     - ineffassign
