--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,11 +1,11 @@
 version: "2"
-linters-settings:
-  cyclop:
-    max-complexity: 2
-    package-average: 1.0
-  gocyclo:
-    min-complexity: 2
 linters:
+  settings:
+    cyclop:
+      max-complexity: 2
+      package-average: 1.0
+    gocyclo:
+      min-complexity: 2
   enable:
     - asciicheck
     - bidichk
