chore: find a problems by static analyze

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -35,8 +35,12 @@ linters:
     - exptostd
     - forbidigo
     - funcorder
+    - gocheckcompilerdirectives
+    - goconst
     - gocritic
     - gocyclo
+    - gomodguard
+    - gosec
     - govet
     - ineffassign
     - misspell
