chore: find a problems by static analyze

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,6 +50,9 @@ linters:
     - govet
     - iface
     - ineffassign
+    - intrange
+    - iotamixing
+    - mirror
     - misspell
     - staticcheck
     - unused
