refactor: clarify for readablility of http server

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -54,6 +54,8 @@ linters:
     - iotamixing
     - mirror
     - misspell
+    - mnd
+    - modernize
     - staticcheck
     - unused
     - usestdlibvars
