chore: detect a defects by static analyze

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -56,7 +56,18 @@ linters:
     - misspell
     - mnd
     - modernize
+    - musttag
+    - nilerr
+    - nilnil
+    - noctx
+    - nosprintfhostport
+    - prealloc
+    - predeclared
+    - reassign
+    - rowserrcheck
+    - sqlclosecheck
     - staticcheck
+    - tagalign
     - unused
     - usestdlibvars
 formatters:
