chore: find a defects by static analyze

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -68,8 +68,15 @@ linters:
     - sqlclosecheck
     - staticcheck
     - tagalign
+    - unconvert
+    - unparam
+    - unqueryvet
     - unused
     - usestdlibvars
+    - usetesting
+    - wastedassign
+    - whitespace
+    - wrapcheck
 formatters:
   enable:
     - gci
